<resources>
    <string name="app_name">CoronaBD</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="wish_list">Favourite</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <string name="profile_toolbar">Account</string>
    <string name="profile_user_name">User Name</string>

    <!--Login Page String-->
    <string name="editText_mail">E-mail Address</string>
    <string name="editText_password">******</string>
    <string name="text_forgotPass">Forgot password?</string>
    <string name="button_signIn">Sign in</string>
    <string name="internal_storage">Internal storage</string>
    <string name="text_all_category">All Category</string>

    <string name="dashboard_toolbar">Dashboard</string>
    <string name="wish_list_toolbar">Favourite Courses</string>

    <string name="search_toolbar">Search Courses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="ok">ঠিক আছে</string>
    <string name="file_access_message">ফাইল রাখার অনুমতি প্রয়োজন,\nতা ছাড়া অ্যাপ ভালোভাবে  চলবে না</string>
    <string name="permission_permanently_denied">অ্যাপের সেটিংসে গিয়ে স্টোরেজ পারমিশন দিন</string>


</resources>
