<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp">
    </item>

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_stat_black_24dp">
    </item>

    <item
        android:id="@+id/menu_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_map_black_24dp">
    </item>

    <item
        android:id="@+id/menu_wish_list"
        android:title="@string/wish_list"
        android:icon="@drawable/ic_info_black_24dp">
    </item>

    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_outline_black_24dp">
    </item>
</menu>